--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -24,3 +24,54 @@
         }
     }
 }
+
+//HEADING LINE
+
+.heading-line::before{
+    content: "";
+    width: 10rem;
+    height: 0.1rem;
+    display: block;
+    margin: 0 auto;
+    background-color: $primary;
+}
+.heading-line::after{
+    content: "";
+    width: 2rem;
+    height: 0.2rem;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    padding-top: 0.5rem;
+    background-color: $primary;
+}
+
+//DISPLAY 3
+
+.display-3{
+    font-family: 'Poppins', sans-serif;
+
+    &--title{
+        font-size: 1.2rem;
+        text-transform: capitalize;
+        font-weight: 600;
+        font-family: 'Poppins', sans-serif;
+        display: inline-block;
+        background-image: linear-gradient(to right, $primary, $secondary);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color:transparent;
+
+        @include media-breakpoint-up(lg){
+            font-size: 1.8rem;
+        }
+
+    }
+}
+
+// BORDER RIGHT
+
+.border-right{
+    border-right: 0.1rem solid $gray-300;
+    height: 100%;
+}
