--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -13,3 +13,10 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
+    // TRANSION PROPERTY
+
+    @mixin transitionProperty{
+        transition-duration: 1000ms;
+        transition-property: all;
+    }
